<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fce8f4"
    android:orientation="vertical"
    android:padding="@dimen/padding_top_linear_layout"
    tools:context=".DeveloperNoteActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="4dp"
        android:text="@string/developer_full_note" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/abdulquadri_o_alaka"
        android:textAppearance="?android:textAppearanceMedium"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/abdulquadrialaka_gmail_com"
        android:textColor="#a40665"
        android:textStyle="bold" />

</LinearLayout>