<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fce8f4"
    android:orientation="vertical"
    android:padding="@dimen/padding_top_linear_layout"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:textAppearance="?android:textAppearanceMedium"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/unit_sample_weight_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="?android:textAppearanceMedium">

        <EditText
            android:id="@+id/unit_sample_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/margin_left_linear_layout"
            android:fontFamily="monospace"
            android:hint="@string/weight_of_unit_sample"
            android:inputType="numberDecimal"
            android:textColorHighlight="#448aff" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/quantity_of_samples_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="?android:textAppearanceMedium">

        <EditText
            android:id="@+id/quantity_of_samples"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/margin_left_linear_layout"
            android:fontFamily="monospace"
            android:hint="@string/quantity_of_samples_to_be_immersed"
            android:inputType="numberDecimal"
            android:textColorHighlight="#448aff" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/fruit_sugar_ratio_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="?android:textAppearanceMedium">

        <EditText
            android:id="@+id/fruit_sugar_ratio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/margin_left_linear_layout"
            android:fontFamily="monospace"
            android:hint="@string/fruit_sugar_solution_ratio"
            android:inputType="numberDecimal"
            android:textColorHighlight="#448aff" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/deg_brix_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="?android:textAppearanceMedium">

        <EditText
            android:id="@+id/deg_brix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/margin_left_linear_layout"
            android:fontFamily="monospace"
            android:hint="@string/degree_brix_level"
            android:inputType="numberDecimal"
            android:textColorHighlight="#448aff" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/calc_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/how_much_sugar_and_water_do_i_need"
        android:textAllCaps="false"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/white" />
</LinearLayout>